расширение контрактов
